--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              "src/jquery.connections.js"
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
