--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.1.0",
-    "core-js": "2.5.5",
-    "zone.js": "0.8.26",
     "@angular/cdk": "7.0.0-beta.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
     "@angular/core": "6.0.0",
     "@angular/forms": "6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/router": "6.0.0",
-    "@angular/compiler": "6.0.0",
     "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0"
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/router": "6.0.0",
+    "core-js": "2.5.5",
+    "jquery": "^3.4.1",
+    "rxjs": "6.1.0",
+    "zone.js": "0.8.26"
   },
   "scripts": {
     "ng": "ng",
